<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/getOtpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/inter"
            android:text="@string/get_otp"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enterPhoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/enter_your_nphone_number"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/getOtpText" />

        <EditText
            android:id="@+id/countryCodeEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="12dp"
            android:text="@string/_91"
            android:maxLength="4"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/edit_text_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterPhoneText"
            android:autofillHints="phone"
            android:inputType="number" />
        <EditText
            android:id="@+id/phoneNumberEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:hint="9999999999"
            android:maxLength="10"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:ems="6"
            android:textAlignment="center"
            android:background="@drawable/edit_text_style"
            app:layout_constraintStart_toEndOf="@id/countryCodeEdt"
            app:layout_constraintTop_toBottomOf="@id/enterPhoneText"
            android:autofillHints="phone"
            android:inputType="number" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendOtpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Continue"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="17sp"
            app:cornerRadius="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@id/countryCodeEdt"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="#f9cb10"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>