<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:paddingBottom="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/notesTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="43dp"
                android:textSize="34sp"
                android:textStyle="bold"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@android:color/black"
                android:text="@string/notes"/>

            <TextView
                android:id="@+id/personalMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/gilroy"
                android:text="@string/personal_message_to_you"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notesTitleText" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="0dp"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/personalMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="31dp"
                android:layout_marginEnd="31dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/sample_image" />
                    <TextView
                        android:id="@+id/nameAgeTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/meena_23"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/gilroy_bold"
                        android:textColor="@color/white"
                        android:layout_alignTop="@id/shadowView"
                        android:layout_marginTop="20dp"
                        android:textSize="22sp"
                        android:elevation="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tap_to_review_50_notes"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/gilroy"
                        android:textColor="@color/white"
                        android:layout_below="@id/nameAgeTxt"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:elevation="5dp"/>
                    <View
                        android:id="@+id/shadowView"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/highlight_gradient_shadow"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/interestTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Interested In You"
                android:layout_marginStart="31dp"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/card1"
                android:layout_marginTop="12dp"
                android:textSize="22sp"
                android:elevation="5dp"/>

            <TextView
                android:id="@+id/premiumTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/premium_members_can_view_all_their_likes_at_once"
                android:layout_marginStart="31dp"
                android:fontFamily="@font/gilroy"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/upgradeBtn"
                app:layout_constraintBottom_toBottomOf="@id/upgradeBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/upgradeBtn"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"
                android:elevation="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upgradeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upgrade"
                android:textAllCaps="false"
                android:textSize="17sp"
                app:cornerRadius="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/interestTxt"
                android:layout_marginEnd="31dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="#f9cb10"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/premiumTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline1"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="31dp"
                android:layout_marginEnd="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/sample_image" />
                    <TextView
                        android:id="@+id/nameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teena"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/gilroy_bold"
                        android:textColor="@color/white"
                        android:layout_alignBottom="@id/shadowView1"
                        android:layout_marginBottom="10dp"
                        android:textSize="18sp"
                        android:elevation="5dp"/>
                    <View
                        android:id="@+id/shadowView1"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/highlight_gradient_shadow"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/premiumTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="31dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/sample_image" />
                    <TextView
                        android:id="@+id/nameTxt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teena"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/gilroy_bold"
                        android:textColor="@color/white"
                        android:layout_alignBottom="@id/shadowView2"
                        android:layout_marginBottom="10dp"
                        android:textSize="18sp"
                        android:elevation="5dp"/>
                    <View
                        android:id="@+id/shadowView2"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/highlight_gradient_shadow"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>